--- a/ServicesDirectivesFiltersWorkshop/Views/Home.html
+++ b/ServicesDirectivesFiltersWorkshop/Views/Home.html
@@ -3,6 +3,14 @@
 </div>
 
 <div class="col-md-12">
+    <button type="button"
+            class="btn btn-primary"
+            ng-click="go('/Posts/New')">
+        <span class="glyphicon glyphicon-plus"></span> New post
+    </button>
+</div>
+
+<div class="col-md-12">
     <table class="table">
         <tr>
             <th>Title</th>
