Workshop WIP delete button

--- a/ServicesDirectivesFiltersWorkshop/Views/Posts/NewPost.html
+++ b/ServicesDirectivesFiltersWorkshop/Views/Posts/NewPost.html
@@ -30,6 +30,12 @@
                           placeholder="Body..."
                           ng-model="newPost.body"></textarea>
             </div>
+
+            <button type="button"
+                    class="btn btn-success"
+                    ng-click="addPost()">
+                <span class="glyphicon glyphicon-plus"></span> Create post
+            </button>
         </fieldset>
     </form>
 </div>
