--- a/ServicesDirectivesFiltersWorkshop/Views/Home.html
+++ b/ServicesDirectivesFiltersWorkshop/Views/Home.html
@@ -16,11 +16,19 @@
             <th>Title</th>
             <th>Author</th>
             <th>Post Date</th>
+            <th></th>
         </tr>
         <tr ng-repeat="post in posts track by $index">
             <td class="col-md-1" ng-bind="post.title"></td>
             <td class="col-md-1" ng-bind="post.author"></td>
             <td class="col-md-1" ng-bind="post.postDate"></td>
+            <td class="col-md-1">
+                <button type="button" 
+                        class="btn btn-danger"
+                        ng-click="deletePost(post)">
+                    <span class="glyphicon glyphicon-remove"></span> Delete
+                </button>
+            </td>
         </tr>
     </table>
 </div>
